# games

./: Makefile
2048/: start
2048/include/: board.hpp
2048/source/: board.cpp  main.cpp  square.cpp  test.cpp
include/: board.hpp  square.hpp
jogoDaVelha/: CMakeLists.txt  rmCmakefiles.sh  start  startGame.sh
jogoDaVelha/include/: board.hpp  square.hpp
jogoDaVelha/source/: .board.cpp.swp  board.cpp  main.cpp  square.cpp
jogoDaVelha/unitTest/: testBoard.cpp
source/: board.cpp  main.cpp
